--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
-    "PlaygroundJS": "https://github.com/rezoner/playground.git"
+    "PlaygroundJS": "https://github.com/rezoner/playground.git",
+    "pixi.js": "~3.0.6"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
