--- a/bower.json
+++ b/bower.json
@@ -10,12 +10,13 @@
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
     "angular-bootstrap": "~0.11.0",
-    "font-awesome": ">=4.1.0",
+    "font-awesome": "~4.3.0",
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
     "PlaygroundJS": "https://github.com/rezoner/playground.git",
-    "pixi.js": "~3.0.6"
+    "jquery.ui": "~1.11.4",
+    "pixi": "~3.0.6"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
