--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "description": "Send your AI into battle!",
   "main": "server/app.js",
   "dependencies": {
-    "express": "~4.9.0",
-    "morgan": "~1.0.0",
     "body-parser": "~1.5.0",
-    "method-override": "~1.0.0",
-    "serve-favicon": "~2.0.1",
-    "cookie-parser": "~1.0.1",
-    "express-session": "~1.0.2",
-    "errorhandler": "~1.0.0",
-    "compression": "~1.0.1",
-    "lodash": "~2.4.1",
-    "jade": "~1.2.0",
-    "mongoose": "~3.8.8",
-    "jsonwebtoken": "^0.3.0",
-    "express-jwt": "^0.1.3",
-    "passport": "~0.2.0",
-    "passport-local": "~0.1.6",
-    "passport-facebook": "latest",
-    "passport-twitter": "latest",
-    "passport-google-oauth": "latest",
     "composable-middleware": "^0.3.0",
+    "compression": "~1.0.1",
     "connect-mongo": "^0.4.1",
+    "cookie-parser": "~1.0.1",
+    "errorhandler": "~1.0.0",
+    "express": "~4.9.0",
+    "express-jwt": "^0.1.3",
+    "express-session": "~1.0.2",
+    "jade": "~1.2.0",
+    "jsonwebtoken": "^0.3.0",
+    "lodash": "~2.4.1",
+    "method-override": "~1.0.0",
+    "mongoose": "~3.8.8",
+    "morgan": "~1.0.0",
+    "passport": "~0.2.0",
+    "passport-facebook": "latest",
+    "passport-google-oauth": "latest",
+    "passport-local": "~0.1.6",
+    "passport-twitter": "latest",
+    "serve-favicon": "~2.0.1",
     "socket.io": "^1.0.6",
     "socket.io-client": "^1.0.6",
     "socketio-jwt": "^2.0.2"
@@ -32,6 +32,7 @@
   "devDependencies": {
     "connect-livereload": "~0.4.0",
     "generator-angular-fullstack": "git+https://github.com/adamk33n3r/generator-angular-fullstack-coffee.git",
+    "glob": "^5.0.10",
     "grunt": "~0.4.4",
     "grunt-angular-templates": "^0.5.4",
     "grunt-autoprefixer": "~0.7.2",
